1 New project: a Javascript version of Turtle Blocks
  * basic block manipluation
  * basic block execution
  * expandable blocks working
  * cascading of expandable blocks
  * arithmetic functions (arg parsing)
  * setting expandable blocks on run (should be on load)
  * rotate turtle using easeljs rotation
  * implement actions (stacks)
  * implement boxes
  * booleans
  * slowmo playback
  * only one stack
  * add protoblocks for new boxes
  * add protoblock for new stacks
  * time block
  * mouse x, mouse y blocks
  * add controls for rabbit vs turtle
  * add controls for show/hide
  * add eraser button
  * coordinate grids
  * fix palette updates from block palette
  * penup/down
  * fill
  * load blocks
  * click on block to run
  * arc
  * setxy
  * set heading
  * x, y, heading
  * lots-o-sample projects
  * expanding arithmetic blocks
  * expanding 2-arg blocks
  * implement color model (Munsell)
  * fix Munsell 2.5 tables
  * set background color

TODO:
  * save blocks
  * copy/paste
  * user defined
  * better compartmentalization of code
  * sensors/media
  * decide on a palette strategy
  * implement more sophisticated blocks
  * turtle skin
  * multiple turtles (or only one start block)
  * keyboard short cuts
  * trash
  * move labels to container
  * seems that docks and filler associated with proto instead of instance?
   - fix repeat docking bug
   - fix filler hide bug
